--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
 </head>
 <body>
+<link rel="stylesheet" href="main.css">
 <div class="" id="makeImg">
   <span>作業系RPG！</span>
 </div>
