--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <link rel="stylesheet" href="main.css">
-<div class="" id="makeImg">
+<div class="a" id="makeImg">
   <span>作業系RPG！</span>
 </div>
 </body>
