--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <link rel="stylesheet" href="main.css">
 <div class="a" id="makeImg">
-  <span>作業系RPG！</span>
+<div style="position:absolute; left:0px; top:0px;"><span>作業系RPG！</span></div>
 </div>
 </body>
 </html>
