--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 <link rel="stylesheet" href="main.css">
 <div class="a" id="makeImg">
-<div style="position:absolute; left:0px; top:0px;"><span>作業系RPG！</span></div>
+<span>作業系RPG！</span>
 </div>
+<div style="position:absolute; left:600px; top:0px;">勇者ドラゴンズ！</div>
 </body>
 </html>
