--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <link rel="stylesheet" href="main.css">
-<div style="position:absolute; left:600px; top:50px;">勇者ドラゴンズ！</div>
+<div style="position:absolute; left:500px; top:0px;"><h1>勇者ドラゴンズ！</h1></div>
 </body>
 </html>
