--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <link rel="stylesheet" href="main.css">
 <div style="position:absolute; left:500px; top:0px;"><h1>勇者ドラゴンズ！</h1></div>
 </body>
-<image src="Screenshot 2021-08-22 12.57.31.png">
+<image src="a.png">
 </html>
