--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
 <div style="position:absolute; left:500px; top:0px;"><h1>勇者ドラゴンズ！</h1></div>
 </body>
 <image style="transform: rotate(-45deg)" src="a.png">
+<div style="position:absolute; left:300px; top:400px;"><h1>勇ドラをしてレベルをあげよう！</h1></div>
 </html>
