--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <div style="position:absolute; left:500px; top:0px;"><h1>勇者ドラゴンズ！</h1></div>
 </body>
 <image style="transform: rotate(-45deg)" src="a.png">
+<div style="transform: rotate(-10deg); position:absolute; left:500px; top:150px;"><h1>究極の自作RPG！</h1></div>
 <div style="transform: rotate(-25deg); position:absolute; left:500px; top:300px;"><h1>勇ドラをしてレベルをあげよう！</h1></div>
 <div style="position:absolute; left:500px; top:500px;"><h1><a href="https://sugoruru.github.io/rurukun3/" target="_blank">ここ</a>をクリック！</h1></div>
 </html>
